--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="center">
         <h1>Hello</h1>
         <h2>here i am Kamalesh</h2>
-        <button>Resume</button>
-        <button>Project</button>
+        <button>RESUME</button>
+        <button>PROJECT</button>
         <p>ablergiergierugbeiub</p>
     </div>
-    <footer>
+    <footer >
         <ul>
             <li><a href="#">Call</a></li>
             <li><a href="#">Write</a></li>
